<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragments.NewRecipeFragment"
                                             android:background="?android:windowBackground"
                                             android:importantForAutofill="no"
>


    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newrecipe_title"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/titel"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/newrecipe_producten" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.362" android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/nieuw_recept_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/toevoegen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newrecipe_btn_add" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newrecipe_producten"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/producten"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="170dp"
            app:layout_constraintBottom_toTopOf="@+id/newrecipe_allergieen"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newrecipe_allergieen" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/allergieen"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toTopOf="@+id/newrecipe_soort"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newrecipe_soort" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/soort" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/newrecipe_btn_add" app:layout_constraintHorizontal_bias="0.0"/>
    <android.support.design.widget.FloatingActionButton
            android:src="@android:drawable/ic_input_add"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:id="@+id/newrecipe_add_product" app:layout_constraintStart_toEndOf="@+id/newrecipe_producten"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:fabSize="mini" app:backgroundTint="#FFFFFF" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/newrecipe_producten" android:focusable="true"
            android:tooltipText="Klik om het ingegeven product toe te voegen"/>
    <android.support.design.widget.FloatingActionButton
            android:src="@android:drawable/ic_input_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/newrecipe_add_allergie" app:layout_constraintStart_toEndOf="@+id/newrecipe_allergieen"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/newrecipe_allergieen" app:backgroundTint="#FFFFFF"
            app:fabSize="mini" android:focusable="true"
            android:tooltipText="Klik om de ingegeven allergie toe te voegen"/>
    <android.support.v4.widget.NestedScrollView android:layout_width="0dp"
                                                android:layout_height="0dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintTop_toBottomOf="@+id/newrecipe_producten"
                                                app:layout_constraintBottom_toTopOf="@+id/newrecipe_allergieen"
                                                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                                                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                                                android:id="@+id/nestedScrollView">
        <TableLayout
                android:id="@+id/newrecipe_producten_linear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/newrecipe_producten" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/newrecipe_allergieen"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        </TableLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.v4.widget.NestedScrollView android:layout_width="0dp"
                                                android:layout_height="0dp" android:layout_marginEnd="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                android:layout_marginStart="8dp"
                                                app:layout_constraintBottom_toTopOf="@+id/newrecipe_soort"
                                                android:layout_marginTop="8dp"
                                                app:layout_constraintTop_toBottomOf="@+id/newrecipe_allergieen"
                                                android:layout_marginBottom="8dp">
        <TableLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/newrecipe_allergieen" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/newrecipe_soort"
                android:id="@+id/newrecipe_allergieen_linear">
        </TableLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>