<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_recepten"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/recepten"/>

    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_account"/>

</menu>
